--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -78,8 +78,8 @@
     }
 
     .erste-container {
-        padding: 50px 10px 50px 10px !important;
         flex-wrap: wrap;
+        justify-content: center;
 
         .img-ubersicht {
             width: 100%;
